<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RulesView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:gravity="bottom"
    android:orientation="vertical"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/edittext">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp"
                android:paddingTop="20dp"
                android:text="@string/rules"
                android:textSize="40sp"
                android:gravity="center">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp"
                android:paddingTop="20dp"
                android:text="@string/rules1"
                android:textSize="15sp"
                android:gravity="left">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp"
                android:text="@string/rules2"
                android:textSize="15sp"
                android:gravity="left">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp"
                android:text="@string/rules3"
                android:textSize="15sp"
                android:gravity="left">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp"
                android:text="@string/rules4"
                android:textSize="15sp"
                android:gravity="left">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp"
                android:text="@string/rules5"
                android:textSize="15sp"
                android:gravity="left">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp"
                android:text="@string/rules6"
                android:textSize="15sp"
                android:gravity="left">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp"
                android:text="@string/rules7"
                android:textSize="15sp"
                android:gravity="left">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp"
                android:paddingBottom="20dp"
                android:text="@string/rules8"
                android:textSize="15sp"
                android:gravity="left">
            </TextView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
