<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GameMenuView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:gravity="top"
    >

    <ImageButton
        android:id="@+id/preferences_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="fitXY"
        android:src="@drawable/parameter"
        android:layout_gravity="end"
        android:background="@drawable/button"
        android:layout_margin="5dp"
        android:padding="8dp"
        android:onClick="onPreferences"
        android:contentDescription="@string/preferences"></ImageButton>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/goldBack1"
            android:layout_width="360dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:background="@drawable/edittext"
            android:layout_gravity="center">

        </TextView>

        <TextView
            android:id="@+id/display_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="50dp"
            android:paddingTop="15dp"
            android:paddingEnd="50dp"
            android:text="@string/not_set"
            android:textColor="@color/black"
            android:textSize="30sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:width="220dp"
        android:height="50dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:onClick="onLogin"
        android:text="@string/login"
        android:textColor="@color/goldText"
        android:textSize="25sp" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:width="220dp"
        android:height="50dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:onClick="onRegister"
        android:text="@string/register"
        android:textColor="@color/goldText"
        android:textSize="25sp" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:width="220dp"
        android:height="50dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:onClick="onLogout"
        android:text="@string/logout"
        android:textColor="@color/goldText"
        android:textSize="25sp" />

    <Button
        android:id="@+id/join_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:width="220dp"
        android:height="50dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:onClick="onJoin"
        android:text="@string/join"
        android:textColor="@color/goldText"
        android:textSize="25sp" />

    <Button
        android:id="@+id/reconnect_view_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:width="220dp"
        android:height="50dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:onClick="onReconnectView"
        android:text="@string/reconnect_view"
        android:textColor="@color/goldText"
        android:textSize="25sp" />

    <Button
        android:id="@+id/create_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:width="220dp"
        android:height="50dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:onClick="onCreateGame"
        android:text="@string/new_game"
        android:textColor="@color/goldText"
        android:textSize="25sp" />

    <!--<Button
        android:id="@+id/preferences_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:width="220dp"
        android:height="50dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:onClick="onPreferences"
        android:text="@string/preferences"
        android:textColor="@color/goldText"
        android:textSize="25sp" /> -->

</LinearLayout>
