<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/CreateView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:gravity="bottom"
    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/goldBack1"
            android:layout_width="360dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:background="@drawable/edittext"
            android:layout_gravity="center">

        </TextView>

        <TextView
            android:id="@+id/created_game_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="50dp"
            android:paddingTop="15dp"
            android:paddingEnd="50dp"
            android:text="@string/gameId"
            android:textColor="@color/black"
            android:textSize="30sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/goldBack"
            android:layout_width="360dp"
            android:layout_height="250dp"
            android:gravity="center"
            android:background="@drawable/edittext"
            android:layout_gravity="center">

        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p1"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/player2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p2"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/player3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p3"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:textSize="30sp"/>

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/add_bot_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_bot"
        android:textColor="@color/goldText"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:width="220dp"
        android:height="50dp"
        android:background="@drawable/button"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/start_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:textColor="@color/goldText"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="30dp"
        android:width="220dp"
        android:height="50dp"
        android:background="@drawable/button"
        android:layout_gravity="center" />



</LinearLayout>
